--- a/adivinanza.html
+++ b/adivinanza.html
@@ -32,7 +32,8 @@
         button {
             background-color:green;
             color: white;
-            padding: 20px 30px;            border: none;
+            padding: 20px 30px;
+            border: none;
             border-radius: 5px;
             font-size: 26px;
         }
